add: create_account_screenの多言語対応をしました。

--- a/lib/l10n/app_jp.arb
+++ b/lib/l10n/app_jp.arb
@@ -1,4 +1,45 @@
 {
 "@@locale": "ja",
-"test": "テスト"
+"attraction": "アトラクション",
+"no_post": "投稿がまだありません",
+"edit": "編集",
+"post": "投稿",
+"name": "名前",
+"user_id":"ユーザーID",
+"self_introduction": "自己紹介",
+"email": "メールアドレス",
+"password": "パスワード(６文字以上)",
+"create_account": "アカウント作成",
+"delete_check_title": "削除確認",
+"delete_check_content": "投稿を削除してもよろしいでしょうか？\n復元はできなくなっております。",
+"cancel":"キャンセル",
+"ok": "OK",
+"tweet": "tweet",
+"update": "更新する",
+"log_out_check_title": "ログアウト確認",
+"log_out_check_content": "ログアウトします。\nよろしいでしょうか？",
+"log_out": "ログアウト",
+"delete_account_title": "アカウント削除確認",
+"delete_account_content": "アカウントの情報を削除します。\n投稿内容も全て削除されます。\nよろしいでしょうか？",
+"delete_account": "アカウントを削除",
+"log_in": "ログイン",
+"app_title": "TDR APP",
+"register_screen": "新規登録はこちら",
+"login_screen": "パスワードを忘れた場合",
+"reset_password": "パスワードの再設定",
+"send_message": "メールアドレスにパスワード再設定のメールを送信します。",
+"send_email": "メールを送る",
+"is_spoiler_true": "ネタバレあり!",
+"is_spoiler_false": "ネタバレなし!",
+"completed_to_create_account": "アカウント登録完了",
+"completed_to_create_account_content": "アカウントの登録が完了しました。\n確認用のメールをお送りしました。\nメール内のリンクをクリックし、\n認証を行ってください。",
+"error_empty_register": "登録してた内容に不備があります",
+"error_empty_email": "メールアドレスを入力してください",
+"error_empty_post": "いずれかの値が未記入となっています",
+"send_message": "メールを送信しました。",
+"dialog_spoiler_cell_text": "ネタバレがあります!!!\n遷移して確認ください🙇‍",
+"dialog_contact_title": "お問い合わせ画面に遷移",
+"dialog_contact_contents": "投稿について問い合わせるサイトに\n遷移します。よろしいですか？",
+
+"app_bar_create_account": "Create Account"
 }
