add: TwitterとInstagramの紐付けも可能にしました。

--- a/lib/gen/app_jp.arb
+++ b/lib/gen/app_jp.arb
@@ -4,6 +4,7 @@
 "attraction": "アトラクション",
 "no_post": "投稿がまだありません",
 "edit": "編集",
+"sns_edit": "SNS",
 "post": "投稿",
 "name": "名前",
 "user_id":"ユーザーID",
@@ -12,7 +13,7 @@
 "password": "パスワード(６文字以上)",
 "create_account": "アカウント作成",
 "tweet": "tweet",
-"update": "更新する",
+"update": "更新",
 "log_out": "ログアウト",
 "log_in": "ログイン",
 "app_title": "TDR APP",
@@ -20,6 +21,12 @@
 "impressions": "感想",
 "is_spoiler_true": "ネタバレあり!",
 "is_spoiler_false": "ネタバレなし!",
+
+"twitter_hint_text": "TwitterのID",
+"instagram_hint_text": "InstagramのID",
+
+"sns_title": "🚫 SNS情報公開に関する警告 🚫",
+"sns_description": "SNS上での情報公開には慎重な取り扱いが求められます。\n よく理解し、自身の情報を保護するための対策を講じてください。\n 公開情報の管理は各自の責任で行ってください。",
 
 "register_screen": "新規登録はこちら",
 "login_screen": "パスワードを忘れた場合",
