add: なりすましたアカウントだった場合の対応を行いました。

--- a/lib/gen/app_jp.arb
+++ b/lib/gen/app_jp.arb
@@ -26,7 +26,8 @@
 "instagram_hint_text": "InstagramのID",
 
 "sns_title": "🚫 SNS情報公開に関する警告 🚫",
-"sns_description": "SNS上での情報公開には慎重な取り扱いが求められます。\n よく理解し、自身の情報を保護するための対策を講じてください。\n 公開情報の管理は各自の責任で行ってください。",
+"sns_description": "SNS上での情報公開には慎重な取り扱いが求められます。よく理解し、自身の情報を保護するための対策を講じてください。\n\n公開情報の管理は各自の責任で行ってください。\n\nもし、なりすましを疑われるアカウントを発見された場合、以下のフォームに情報を入力してください。",
+"sns_report": "報告する",
 
 "register_screen": "新規登録はこちら",
 "login_screen": "パスワードを忘れた場合",
