fix: iPhone8のoverflowを修正しました。

--- a/lib/gen/app_jp.arb
+++ b/lib/gen/app_jp.arb
@@ -3,8 +3,8 @@
 "app_name": "TDR APP",
 "attraction": "アトラクション",
 "no_post": "投稿がまだありません",
-"edit": "編集",
-"sns_edit": "SNS",
+"edit": "アカウント編集",
+"sns_edit": "SNS編集",
 "post": "投稿",
 "name": "名前",
 "user_id":"ユーザーID",
