--- a/lib/gen/app_jp.arb
+++ b/lib/gen/app_jp.arb
@@ -2,6 +2,7 @@
 "@@locale": "ja",
 "app_name": "TDR APP",
 "attraction": "アトラクション",
+"theme_park":"テーマパーク",
 "no_post": "投稿がまだありません",
 "edit": "アカウント編集",
 "sns_edit": "SNS編集",
@@ -81,5 +82,7 @@
 "app_bar_login" : "Login",
 
 "search_attraction": "アトラクション",
-"search_star": "評価"
+"search_star": "評価",
+
+"post_place_title": "テーマパークを探す"
 }
